[package]
name = "polars_plugins"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_plugins"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.43" }
pyo3 = { version = "0.22.5", features = ["extension-module", "abi3-py312"] }
pyo3-polars = { version = "*", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
num-traits = {version = "*"}
fastmurmur3 = "0.2.0"