[project]
name = "polars-plugins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.9.0",
    "maturin>=1.7.4",
    "numpy>=2.1.2",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
